--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -93,7 +93,7 @@
                                     <li>
                                         <a class="uk-accordion-title" href="#">MLS Board</a>
                                         <div class="uk-accordion-content">
-                                            <p>(Optional) MLS is an additional $20 and a $200 set up. Free trial does not include MLS. Direct or pass-through fees may be applicable depending on your MLS board</p>
+                                            <p>(Optional) MLS is an additional $20 and a $200 set up. Free trial does not include MLS. Direct or pass-through fees may be applicable depending on your MLS board. IDX Pricing will not be reflected on subscription.</p>
                                             <div class="uk-grid-small" uk-grid>
                                                 <div class="uk-width-1-1">
                                                     <input class="uk-checkbox" type="checkbox" id="mlsdata" name="mlsdata"><label for="mlsdata"> I want MLS Data (IDX)</label>
@@ -193,7 +193,7 @@
                                     <li>
                                         <a class="uk-accordion-title" href="#">MLS Board</a>
                                         <div class="uk-accordion-content">
-                                            <p>(Optional) MLS is an additional $20 and a $200 set up. Free trial does not include MLS. Direct or pass-through fees may be applicable depending on your MLS board</p>
+                                            <p>(Optional) MLS is an additional $20 and a $200 set up. Free trial does not include MLS. Direct or pass-through fees may be applicable depending on your MLS board. IDX Pricing will not be reflected on subscription.</p>
                                             <div class="uk-grid-small" uk-grid>
                                                 <div class="uk-width-1-1">
                                                     <input class="uk-checkbox" type="checkbox" id="mlsdata" name="mlsdata"><label for="mlsdata"> I want MLS Data (IDX)</label>
