--- a/layouts/services/single.html
+++ b/layouts/services/single.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 </div> -->
-<div class="uk-section uk-section-small uk-margin-large-bottom">
+<div class="uk-section uk-section-small">
     <div class="uk-container">
         <h2>{{ .Params.second_intro.heading }}</h2>
         <div class="uk-text-left uk-grid-large" uk-grid>
@@ -63,6 +63,31 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="uk-section">
+    <div class="uk-container">
+        <div class="uk-child-width-1-3@s" uk-grid>
+            {{ range .Params.blocks }}
+            <div>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <div class="uk-padding svg__icons">
+                            {{ .svg | safeHTML }}
+                        </div>
+                    </div>
+                    <div class="uk-card-body" style="padding-top:10px">
+                        <h3 class="uk-h4 uk-text-bold">{{ .heading }}</h3>
+                        <p>{{ .body }}</p>
+                    </div>
+                </div>
+            </div>
+            {{ end }}
+        </div>
+    </div>
+</div>
+<div class="uk-section">
+    <div class="uk-container">
         <div class="uk-grid">
             <div class="uk-width-1-1 md__content">
                 {{ .Content }}
