design home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 {{ partial "global/head" . }}
 {{ partial "home/hero" . }}
-{{ partial "templates/promo" . }}
+{{ partial "home/intro" . }}
 {{ partial "home/icons" . }}
-{{ partial "home/second-home" . }}
-{{ partial "home/services" . }}
 {{ partial "home/image-banner" . }}
+
+{{ partial "home/services" . }}
 {{ partial "home/work" . }}
 {{ partial "global/closing" . }}
 {{ partial "global/footer" . }}
