--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,15 +1,16 @@
 {{ $hero := .Site.Data.home.hero }}
-<div class="uk-cover-container uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-bottom:25" style="background: #090909" uk-grid>    
-    <div class="uk-position-top full-nav-wrapper" style="z-index: 1;">
+<div class="uk-cover-container" uk-height-viewport="offset-bottom:10" style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1636968077/hungryram/business-meet.jpg) no-repeat center;background-size:cover" uk-grid>    
+    <div class="uk-overlay-primary uk-position-cover"></div>
+    <div class="uk-position-top full-nav-wrapper" style="z-index: 2;">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="hero-text uk-white uk-width-3-5@s uk-text-center uk-flex uk-flex-center uk-margin-large-top" style="margin-left:15px;margin-right: 15px;">
-        <div class="uk-width-1-1@s">
+    <div class="hero-text uk-white uk-width-3-5@s uk-text-left uk-margin-large-top uk-position-center uk-padding" style="z-index:1">
+        <div class="uk-width-3-5@s uk-padding">
             {{ if $hero.heading }}
-            <h1 class="uk-text-bold heading uk-margin-remove uk-white uk-h2" style="color: #fff;">{{ $hero.heading }}</h1>
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white">{{ $hero.heading }}</h1>
             {{ end }}
             {{ if $hero.heading }}
-            <p class="uk-text-default uk-white">{{ $hero.body }}</p>
+            <p class="uk-white uk-text-large">{{ $hero.body }}</p>
             {{ end }}
             <a href="#site-audit" class="uk-button-primary uk-button" uk-toggle>Audit Your Site</a>
             <a href="https://calendly.com/hungry-ram" class="uk-button-secondary uk-button" style="border: 1px solid white;background:transparent">Book a call</a>
