--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -1,25 +1,19 @@
+
 <div class="uk-section" id="icons-section">
     <div class="uk-container">
-        <div class="uk-flex uk-flex-center">
-            <div class="uk-width-2xlarge">
-                <div class="uk-margin-large-bottom md__content">
-                    <h2 class="uk-text-center">We build websites using only the best web development tools</h2>
-                    <p class="uk-text-center">We put focus on delivering a better website structure centered around speed and security. Our websites are built using the new JAMstack development for achieving blazing fast websites coupled with the highest <a href="/services/web-hosting/">security</a>. Designs are inspired by both modern and industry-standard websites allowing a better site browsing experience for every unique visitor.</p>
-                    <div class="uk-text-center">
-                        <a href="/about" class="uk-button uk-button-primary uk-text-center">About us</a>
-                    </div>
-                </div>
-            </div>
+        <div class="uk-margin-large-bottom uk-text-left uk-width-2xlarge">
+            <h2>What is our <span class="accent">goal</span>?</h2>
+            <p>We know how important it is to have an online presence, but we also know that Wordpress isn’t always the best solution for your business. We want to show business owners that there are better faster and more secure alternatives to WordPress.</p>
+            <p>Hungry Ram uses modern development architecture designed to make your website faster more secure, and flexible to scale</p>
         </div>
-
-        <div class="uk-child-width-1-3@m uk-text-center uk-grid-column-large" uk-grid uk-height-match="target: .uk-card">
+        <div class="uk-child-width-1-3@m uk-text-left uk-grid-medium" uk-grid uk-height-match="target: .uk-card">
             {{ range .Site.Data.home.featured_blocks }}
             <div>
-                <div class="uk-card">
-                    <div class="uk-card-media-top uk-margin-small-bottom">
+                <div class="uk-card hr-border uk-card-body" style="padding: 30px;">
+                    <div class="uk-card-media-top uk-margin-medium-bottom">
                         {{ .svg | safeHTML }}
                     </div>
-                    <div class="uk-card-body" style="padding:15px;">
+                    <div>
                         <h3 class="uk-card-title uk-h3" style="font-size: 1.2rem;">{{ .heading }}</h3>
                         <p class="uk-text-left">{{ .body }}</p>
                     </div>
