--- a/layouts/partials/home/services.html
+++ b/layouts/partials/home/services.html
@@ -2,8 +2,8 @@
     <div class="uk-container">
         <div class="uk-flex uk-flex-center">
             <div class="uk-width-2xlarge uk-text-center">
-                <h2>Providing you the best web design service</h2>
-                <p>Hungry Ram provides a fast response time and unlimited revisions to your website. We pride ourselves in delivering you the fastest support whether text, email, or phone we are here to help.</p>
+                <h2>Our web design <span class="accent">services</span></h2>
+                <p>We provide high quality web design services for real estate and small businesses that are tailored to meet the specific needs of each client. Get a website that will help your business stand out from the competition.</p>
             </div>
         </div>
         <div class="uk-child-width-1-3@s uk-text-left uk-grid-collapse uk-margin-large-top" uk-grid>
