--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -4,7 +4,7 @@
     <div class="uk-position-top full-nav-wrapper" style="z-index: 2;">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="hero-text uk-white uk-width-3-5@s uk-text-left uk-margin-large-top uk-position-center uk-padding" style="z-index:1">
+    <div class="hero-text uk-white uk-width-3-5@s uk-text-left uk-margin-large-top uk-position-center" style="z-index:1">
         <div class="uk-width-3-5@s uk-padding">
             {{ if $hero.heading }}
             <h1 class="uk-text-bold heading uk-margin-remove uk-white">{{ $hero.heading }}</h1>
