--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -72,7 +72,17 @@ src="https://www.facebook.com/tr?id=372514063562316&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
     
     
-    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RDk2jk"></script>
+<!-- Hotjar Tracking Code for https://www.hungryram.com -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2705292,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body id="body">
 <!-- Messenger Chat Plugin Code -->
