--- a/layouts/partials/home/intro.html
+++ b/layouts/partials/home/intro.html
@@ -2,15 +2,17 @@
     <div class="uk-container">
         <div class="uk-grid-large" uk-grid>
             <div class="uk-width-expand@s">
-                <h2>What we do <span class="accent">differently</span></h2>
+                <h2 class="uk-h3">We specialize in <span class="accent">real estate</span> and <span class="accent">small business</span> websites</h2>
             </div>
             <div class="uk-width-3-5@s">
                 <div class="uk-text-left uk-margin-large-bottom md__content">
-                    <p>WordPress is the most used website builder in the world. This means that all of your competitors are using it too, and that's a problem for you!
+                    <p>WordPress is the most used website builder in the world for real estate and small businesses. This means that all of your competitors are using it too, and that's a problem for you!
                     </p>
-                    <p>Hungry Ram offers a better solution and gives our clients the advantage of a more fast and secure website that WordPress can't compete with. We have adopted a new method called Jamstack that speeds up websites dramatically while also increasing security. Our clients see an average of 20% increase in conversion rates when they use our website!</p>
+                    <p>Hungry Ram delivers a better solution that gives our clients in real estate and small businesses the edge over their competitors. We adopted a new method called Jamstack that provides the fastest and most secure websites. With our efficiently built webites, our clients see an average of 20% increase in conversion rates when they use our website!</p>
+                    <p class="uk-text-bold">Let's take your business to the next level with a strong website</p>
                     <div class="uk-text-left">
-                        <a href="/about" class="uk-button uk-button-primary uk-text-center">About us</a>
+                        <a href="http://localhost:1313/services/agent-idx-websites/" class="uk-button uk-button-primary uk-text-center">Real Estate</a>
+                        <a href="http://localhost:1313/services/small-business-website-design/" class="uk-button uk-button-secondary uk-text-center">Small Business</a>
                     </div>
                 </div>
             </div>
