update website special

--- a/layouts/website-signup/website-signup.html
+++ b/layouts/website-signup/website-signup.html
@@ -2,7 +2,7 @@
     <div class="uk-section">
         <div class="uk-container">
             <h2>Thank you for starting your free trial!</h2>
-            <p>One of our team members will reach out to help put your website together with your pictures and information</p>
+            <p>We're excited to show you how our sites can help you rank better than your competitors! One of our team members will reach out to help put your website together with your pictures and information</p>
             <p>Want to schedule a call? Click the button below</p>
             <a href="https://calendly.com/hungry-ram" class="uk-button-primary uk-button">Schedule a call</a>
 
