--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -1,15 +1,21 @@
 {{ partial "global/head" . }}
 {{ $hero := .Site.Data.home.hero }}
-<div class="uk-cover-container" uk-height-viewport="offset-bottom:30" style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1636968077/hungryram/business-meet.jpg) no-repeat center;background-size:cover" uk-grid>    
+<div class="uk-cover-container" uk-height-viewport="offset-bottom:45" style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1636968077/hungryram/business-meet.jpg) no-repeat center;background-size:cover" uk-grid>    
     <div class="uk-overlay-primary uk-position-cover"></div>
     <div class="uk-position-top full-nav-wrapper" style="z-index: 2;">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="hero-text uk-white uk-width-1-1@s uk-text-left uk-margin-large-top uk-position-center" style="z-index:1">
-        <div class="uk-width-3-5@s uk-padding">
+    <div class="hero-text uk-white uk-width-1-1@s uk-text-left uk-margin-large-top uk-position-center uk-text-center@s" style="z-index:1">
+        <div class="uk-padding">
             <h1 class="uk-text-bold heading uk-margin-remove uk-white">Powerful Real estate IDX website</h1>
-            <p class="uk-white uk-text-large">Give your website an edge over your competitors with a brand new real estate platform</p>
-            <a href="https://calendly.com/hungry-ram" class="uk-button-primary uk-button">Schedule a call</a>
+            <p>Give your business an edge over your competitors with a new type of website.<br>Built entirely different from your average real estate websites.</p>
+            
+            <div class="uk-margin-medium-top">
+                <a href="#website-signup" class="uk-button-primary uk-button" uk-scroll>Start Free trial</a>
+                <div>
+                    <small>Start your 7-day free trial. No credit card required.</small>
+                </div>
+            </div>
         </div>
     </div>
     
@@ -20,16 +26,16 @@
             <div class="uk-width-1-2@s uk-margin-medium-bottom">
                 <h3><span class="accent">LIMITED TIME:</span> We're offering a risk free investment for your real estate business!</h3>
                 <p style="font-weight:600">Why? We want you to experience the next level in real estate websites.</p>
-                <p>With a free trial, you'll learn how everything works and get the guidance you need.</p>
+                <p>With a free trial, you'll learn how everything works and get the guidance you need. Start your free trial today and get a website personalized for you.</p>
+                <p style="font-weight:600">Need proof? Sign up for free and we'll send you a report!</p>
+
                 <ul class="uk-list">
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>No contract cancel anytime</li>
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Superior support</li>
-                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Hosted on lightning fast servers</li>
-                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Site back ups</li>
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Search Engine Optimized</li>
                 </ul>
             </div>
-            <div class="uk-width-1-2@s">
+            <div class="uk-width-1-2@s" id="website-signup">
                         <div class="uk-card uk-card-default" style="padding: 30px;">
                             <div class="uk-text-center">
                                 <h3 class="uk-margin-remove">Start for free today</h3>
@@ -136,7 +142,7 @@
 </div>
 <div class="uk-section">
     <div class="uk-container">
-        <h2>Customer Reviews</h2>
+        <h2>Customer reviews</h2>
         <article class="uk-comment uk-comment-primary uk-margin-small-bottom">
             <header class="uk-comment-header">
                 <div class="uk-grid-medium uk-flex-middle" uk-grid>
