--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -5,14 +5,14 @@
         {{ partial "global/navbar" . }}
     </div>
     <div class="hero-text uk-white uk-width-3-5@s uk-text-left uk-margin-large-top uk-position-center" style="z-index:1">
-        <div class="uk-width-3-5@s uk-padding">
+        <div class="uk-width-3-5@s uk-padding-small">
             {{ if $hero.heading }}
             <h1 class="uk-text-bold heading uk-margin-remove uk-white">{{ $hero.heading }}</h1>
             {{ end }}
             {{ if $hero.heading }}
             <p class="uk-white uk-text-large">{{ $hero.body }}</p>
             {{ end }}
-            <a href="#site-audit" class="uk-button-primary uk-button" uk-toggle>Audit Your Site</a>
+            <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Learn more</a>
             <a href="https://calendly.com/hungry-ram" class="uk-button-secondary uk-button" style="border: 1px solid white;background:transparent">Book a call</a>
         </div>
     </div>
