--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,14 +21,16 @@
 </div>
 
 {{ else }}
-<div class="uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg)no-repeat center;background-size:cover" uk-height-viewport="offset-bottom: 55">
+<div class="uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg)no-repeat center;background-size:cover" uk-height-viewport="offset-bottom: {{ if in .Permalink "blog" }}75{{ else }}55{{ end }}">
     <div class="uk-position-top full-nav-wrapper">
         {{ partial "global/navbar" . }}
     </div>
+    {{ if not (in .Permalink "blog") }}
     <div class="uk-margin-large-top uk-text-left uk-padding">
     <h1 class="uk-text-uppercase uk-white uk-text-center uk-h2 uk-margin-medium-top" style="color: #fff;">{{ .Title }}</h1>
     {{ partial "templates/breadcrumbs" . }}
     </div>
+    {{ end }}
 </div>
 
 {{ end }}
